Unit tests of multimeter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "python.analysis.extraPaths": [
-        "./api/models"
+        "./api/models",
+        "./unittests/multimeter/utils",
+        "./unittests/multimeter/components/utils"
     ]
 }
